--- a/app/res/layout/attribute_registration_view.xml
+++ b/app/res/layout/attribute_registration_view.xml
@@ -19,13 +19,13 @@
     android:layout_height="fill_parent" >
 
     <EditText
-        android:id="@+id/etEmailAddress"
+        android:id="@+id/etAttributeValue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/tvEmailAddress"
+        android:layout_alignBottom="@+id/tvAttributeName"
         android:layout_alignParentRight="true"
         android:ems="10"
-        android:inputType="textEmailAddress" >
+        android:inputType="text" >
 
         <requestFocus />
     </EditText>
@@ -45,22 +45,22 @@
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/tvStep1"
         android:padding="5dp"
-        android:text="@string/tvStartVerificationInfoText" />
+        android:text="@string/tvDefaultStartVerificationInfoText" />
 
     <TextView
-        android:id="@+id/tvEmailAddress"
+        android:id="@+id/tvAttributeName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/tvStartVerificationInfo"
         android:layout_marginTop="16dp"
-        android:text="@string/tvEmailAddress" />
+        android:text="@string/tvDefaultAttributeName" />
 
     <Button
-        android:id="@+id/btnStartEmailVerification"
+        android:id="@+id/btnStartAttributeVerification"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/etEmailAddress"
+        android:layout_below="@+id/etAttributeValue"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="36dp"
         android:text="@string/btnStartVerification" />
@@ -74,7 +74,7 @@
         android:text="@string/tvVerificationPin" />
 
     <Button
-        android:id="@+id/btnCompleteEmailVerification"
+        android:id="@+id/btnCompleteAttributeVerification"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -98,6 +98,7 @@
         android:layout_alignParentRight="true"
         android:layout_below="@+id/textView1"
         android:layout_marginTop="24dp"
+        android:inputType="text"
         android:ems="10" />
 
     <TextView
