--- a/app/res/layout/list_group_layout.xml
+++ b/app/res/layout/list_group_layout.xml
@@ -13,24 +13,16 @@
   See the License for the specific language governing permissions and
   limitations under the License.
 -->
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+    android:layout_height="fill_parent"
+    android:orientation="vertical" >
 
-    <ExpandableListView
-        android:id="@+id/listViewAttributes"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" >
-
-    </ExpandableListView>
-
-    <Button
-        android:id="@+id/button1"
+    <TextView
+        android:id="@+id/tvGroupName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:focusable="false"
-        android:text="Button" />
+        android:text="Medium Text"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
-</RelativeLayout>
+</LinearLayout>
