--- a/app/res/drawable-hdpi/default_bg.xml
+++ b/app/res/drawable-hdpi/default_bg.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   Copyright 2013 SecureKey Technologies Inc.
   
@@ -13,18 +14,22 @@
   See the License for the specific language governing permissions and
   limitations under the License.
 -->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:background="@drawable/list_cell_bg_default"
-    android:orientation="vertical" >
-
-    <TextView
-        android:id="@+id/tvGroupName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Medium Text"
-        android:textColor="#000000"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
-
-</LinearLayout>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+  
+    <padding android:left="0dp" android:top="0dp" 
+            android:right="0dp" android:bottom="0dp" /> 
+            
+    <gradient
+        android:startColor="#ffffff"
+        android:endColor="#CED6D6"
+        android:angle="-90"
+        android:type="linear" />
+  
+     <corners 
+        android:radius="2dp"
+		android:bottomRightRadius="15dp"
+		android:bottomLeftRadius="15dp"
+		android:topLeftRadius="0dp"
+		android:topRightRadius="0dp"/>
+</shape>
