--- a/app/res/values-v11/styles.xml
+++ b/app/res/values-v11/styles.xml
@@ -22,5 +22,9 @@
     <style name="AppBaseTheme" parent="android:Theme.Holo.Light">
         <!-- API 11 theme customizations can go here. -->
     </style>
+    
+    <style name="WindowTitleBackground">     
+        <item name="android:background">@drawable/titlebar_bg_color</item>                   
+    </style>
 
 </resources>
