--- a/app/res/values-v14/styles.xml
+++ b/app/res/values-v14/styles.xml
@@ -16,12 +16,15 @@
 <resources>
 
     <!--
-        Base application theme for API 14+. This theme completely replaces
-        AppBaseTheme from BOTH res/values/styles.xml and
-        res/values-v11/styles.xml on API 14+ devices.
+        Base application theme for API 11+. This theme completely replaces
+        AppBaseTheme from res/values/styles.xml on API 11+ devices.
     -->
-    <style name="AppBaseTheme" parent="android:Theme.Holo.Light.DarkActionBar">
-        <!-- API 14 theme customizations can go here. -->
+    <style name="AppBaseTheme" parent="android:Theme.Holo.Light">
+        <!-- API 11 theme customizations can go here. -->
+    </style>
+    
+    <style name="WindowTitleBackground">     
+        <item name="android:background">@drawable/titlebar_bg_color</item>                   
     </style>
 
 </resources>
