--- a/app/res/drawable-hdpi/add_button.xml
+++ b/app/res/drawable-hdpi/add_button.xml
@@ -30,8 +30,8 @@
     <item>
         <shape>
             <gradient
-                android:startColor="#707b8f"
-                android:endColor="#4a4f66"
+                android:startColor="#30363d"
+                android:endColor="#30363d"
                 android:angle="270" />
             <stroke
                 android:width="1dp"
