--- a/app/res/layout/list_group_layout.xml
+++ b/app/res/layout/list_group_layout.xml
@@ -13,18 +13,32 @@
   See the License for the specific language governing permissions and
   limitations under the License.
 -->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@drawable/list_cell_bg_default"
-    android:orientation="vertical" >
+    >
 
     <TextView
         android:id="@+id/tvGroupName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/btnAddMore"
+        android:layout_alignParentTop="true"
+        android:gravity="center"
         android:text="Medium Text"
-        android:textColor="#000000"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="#000000" />
 
-</LinearLayout>
+    <Button
+        android:id="@+id/btnAddMore"
+         android:layout_width="35dp"
+        android:layout_height="30dp"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:background="@drawable/add_button"
+        android:focusable="false"
+        android:layout_alignParentTop="true"
+        android:text="+" />
+
+</RelativeLayout>
