--- a/app/res/layout/list_child_layout.xml
+++ b/app/res/layout/list_child_layout.xml
@@ -28,7 +28,7 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
          />
 
-    <EditText
+    <TextView
         android:id="@+id/etAttributeValue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
