--- a/app/res/layout/list_child_layout.xml
+++ b/app/res/layout/list_child_layout.xml
@@ -25,15 +25,17 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:textColor="#000000"
+        android:gravity="right"
         android:textAppearance="?android:attr/textAppearanceMedium"
          />
 
     <TextView
         android:id="@+id/etAttributeValue"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="86dp"
+        android:gravity="left"
         android:textColor="#000000"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:layout_toRightOf="@+id/tvAttributeName"
