--- a/app/res/layout/list_child_layout.xml
+++ b/app/res/layout/list_child_layout.xml
@@ -20,13 +20,14 @@
 
     <TextView
         android:id="@+id/tvAttributeName"
-        android:layout_width="wrap_content"
+        android:layout_width="70dp"
+        android:scrollHorizontally="false"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:textColor="#000000"
-        android:gravity="right"
-        android:textAppearance="?android:attr/textAppearanceMedium"
+       
+        android:textSize="14sp"
          />
 
     <TextView
@@ -34,10 +35,10 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="86dp"
+        android:layout_marginLeft="20dp"
         android:gravity="left"
         android:textColor="#000000"
-        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textSize="14sp"
         android:layout_toRightOf="@+id/tvAttributeName"
          />
 
