--- a/app/res/layout/home_screen.xml
+++ b/app/res/layout/home_screen.xml
@@ -20,7 +20,7 @@
 
     <Button
         android:id="@+id/btnScanCode"
-        style="@style/buttonText"
+        style="@style/standardButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/btnManageInfo"
@@ -33,7 +33,7 @@
 
     <Button
         android:id="@+id/btnManageInfo"
-        style="@style/buttonText"
+        style="@style/standardButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
