keybord is now displayed when attribute value is collected.

--- a/app/res/layout/attribute_registration_view.xml
+++ b/app/res/layout/attribute_registration_view.xml
@@ -93,6 +93,8 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="33dp"
         android:ems="10"
-        android:inputType="text" />
+        android:inputType="text" >
+        <requestFocus />
+     </EditText>
 
 </RelativeLayout>
