--- a/app/res/layout/attribute_registration_view.xml
+++ b/app/res/layout/attribute_registration_view.xml
@@ -13,88 +13,97 @@
   See the License for the specific language governing permissions and
   limitations under the License.
 -->
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:background="@drawable/default_bg"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
-
-    <TextView
-        android:id="@+id/tvStep1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:text="@string/tvStep1Text"
-        android:textColor="#000000"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
-
-    <TextView
-        android:id="@+id/tvStartVerificationInfo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/tvStep1"
-        android:padding="5dp"
-        android:textColor="#000000"
-        android:text="@string/tvDefaultStartVerificationInfoText" />
-
-    <Button
-        android:id="@+id/btnCompleteAttributeVerification"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="33dp"
-        android:text="@string/btnCompleteVerification" />
-
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/tvStep2"
-        android:padding="5dp"
-        android:textColor="#000000"
-        android:text="@string/tvCompleteVerificationInfoText" />
-
-    <EditText
-        android:id="@+id/etVerificationCode"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/textView1"
-        android:layout_marginTop="24dp"
-        android:inputType="text"
-        android:ems="10" />
-
-    <TextView
-        android:id="@+id/tvStep2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true"
-        android:text="@string/tvStep2Text"
-        android:textColor="#000000"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
-
-    <Button
-        android:id="@+id/btnStartAttributeVerification"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/tvStep2"
-        android:layout_centerHorizontal="true"
-        android:text="@string/btnStartVerification" />
-
-    <EditText
-        android:id="@+id/etAttributeValue"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/btnStartAttributeVerification"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="33dp"
-        android:ems="10"
-        android:inputType="text" >
-        <requestFocus />
-     </EditText>
-
-</RelativeLayout>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
+    android:layout_width="fill_parent" 
+    android:layout_height="fill_parent"
+    android:fillViewport="true"
+    >
+	<RelativeLayout 
+	    android:background="@drawable/default_bg"
+	    android:layout_width="fill_parent"
+	    android:layout_height="wrap_content" >
+	
+	    <TextView
+	        android:id="@+id/tvStep1"
+	        android:padding="5dp"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_alignParentLeft="true"
+	        android:text="@string/tvStep1Text"
+	        android:textColor="#000000"
+	        android:textAppearance="?android:attr/textAppearanceMedium" />
+	
+	    <TextView
+	        android:id="@+id/tvStartVerificationInfo"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_alignParentLeft="true"
+	        android:layout_below="@+id/tvStep1"
+	        android:padding="5dp"
+	        android:textColor="#000000"
+	        android:text="@string/tvDefaultStartVerificationInfoText" />
+	
+	    <Button
+	        android:id="@+id/btnCompleteAttributeVerification"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_below="@+id/etVerificationCode"
+	        android:layout_centerHorizontal="true"
+	        android:layout_marginTop="30dp"
+	        android:text="@string/btnCompleteVerification" />
+	
+	    <TextView
+	        android:id="@+id/tvCompleteVerificationInfo"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_alignParentLeft="true"
+	        android:layout_below="@+id/tvStep2"
+	        android:padding="5dp"
+	        android:textColor="#000000"
+	        android:text="@string/tvCompleteVerificationInfoText" />
+	
+	    <EditText
+	        android:id="@+id/etVerificationCode"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_centerHorizontal="true"
+	        android:layout_below="@+id/tvCompleteVerificationInfo"
+	        android:layout_marginTop="23dp"
+	        android:inputType="text"
+	        android:ems="10" />
+	
+	    <TextView
+	        android:id="@+id/tvStep2"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_alignParentLeft="true"
+	        android:layout_below="@+id/btnStartAttributeVerification"
+	        android:layout_marginTop="23dp"
+	        android:text="@string/tvStep2Text"
+	        android:textColor="#000000"
+	        android:padding="5dp"
+	        android:textAppearance="?android:attr/textAppearanceMedium" />
+	
+	    <Button
+	        android:id="@+id/btnStartAttributeVerification"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_below="@+id/etAttributeValue"
+	        android:layout_centerHorizontal="true"
+	        android:layout_marginTop="30dp"
+	        android:text="@string/btnStartVerification" />
+	
+	    <EditText
+	        android:id="@+id/etAttributeValue"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_below="@+id/tvStartVerificationInfo"
+	        android:layout_centerHorizontal="true"
+	        android:layout_marginTop="23dp"
+	        android:ems="10"
+	        android:inputType="text" >
+	        <requestFocus />
+	     </EditText>
+	
+	</RelativeLayout>
+</ScrollView>
