added the listview and parsing of request object

--- a/app/res/layout/authorization_list_view.xml
+++ b/app/res/layout/authorization_list_view.xml
@@ -35,6 +35,6 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/lvAuthorizationItems"
         android:layout_centerHorizontal="true"
-        android:text="Button" />
+        android:text="@string/authorizeButtonText" />
 
 </RelativeLayout>
