--- a/app/res/layout/authorization_spinner.xml
+++ b/app/res/layout/authorization_spinner.xml
@@ -14,26 +14,24 @@
   limitations under the License.
 -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-     android:background="@drawable/list_cell_bg_default"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content" >
-
-    <Spinner
-        android:id="@+id/attributeSelector"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="10dp"
-        android:layout_toRightOf="@+id/tvAttributeLabel" />
+    android:layout_height="fill_parent" >
 
     <TextView
         android:id="@+id/tvAttributeLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true"
+        android:layout_alignParentTop="true"
+        android:text="TextView" />
+
+    <TextView
+        android:id="@+id/tvAttributeValue"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
         android:layout_marginLeft="18dp"
-        android:text="TextView"
-        android:textColor="#000000" />
+        android:layout_toRightOf="@+id/textView1"
+        android:text="TextView" />
 
 </RelativeLayout>
