--- a/app/res/layout/authorization_view_row.xml
+++ b/app/res/layout/authorization_view_row.xml
@@ -21,8 +21,8 @@
     <Spinner
         android:id="@+id/attributeSelector"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:layout_centerVertical="true"
+        android:layout_height="50dp"
         android:layout_marginLeft="10dp"
         android:layout_toRightOf="@+id/tvAttributeLabel" />
 
