--- a/app/res/layout/authorization_view_row.xml
+++ b/app/res/layout/authorization_view_row.xml
@@ -13,27 +13,22 @@
   See the License for the specific language governing permissions and
   limitations under the License.
 -->
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:background="@drawable/list_cell_bg_default"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content" >
+    android:layout_height="fill_parent"
+    android:orientation="horizontal" >
+
+    <TextView
+        android:id="@+id/tvAttributeLabel"
+        android:layout_width="100dp"
+        android:layout_height="42dp"
+        android:textColor="#000000"
+        android:text="" />
 
     <Spinner
         android:id="@+id/attributeSelector"
         android:layout_width="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_height="50dp"
-        android:layout_marginLeft="10dp"
-        android:layout_toRightOf="@+id/tvAttributeLabel" />
+        android:layout_height="47dp" />
 
-    <TextView
-        android:id="@+id/tvAttributeLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="18dp"
-        android:text="TextView"
-        android:textColor="#000000" />
-
-</RelativeLayout>
+</LinearLayout>
