layout tweak and jar fix. ID-218

--- a/app/res/layout/authorization_view_row.xml
+++ b/app/res/layout/authorization_view_row.xml
@@ -28,7 +28,7 @@
 
     <Spinner
         android:id="@+id/attributeSelector"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="47dp" />
 
 </LinearLayout>
