--- a/app/res/layout/phone_number_registration.xml
+++ b/app/res/layout/phone_number_registration.xml
@@ -15,6 +15,7 @@
 -->
   <ScrollView 
       xmlns:android="http://schemas.android.com/apk/res/android"
+      android:id="@+id/svPhoneVerification"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:fillViewport="true">
