--- a/app/res/layout/phone_number_registration.xml
+++ b/app/res/layout/phone_number_registration.xml
@@ -62,14 +62,14 @@
 	              android:layout_width="0dp"
 	              android:layout_height="wrap_content"
 	              android:layout_weight="0.2"
-	              android:inputType="phone"
+	              android:inputType="number"
 	              android:textColor="#000000" />
 	          <EditText
 	              android:id="@+id/phNumber"
 	              android:layout_width="0dp"
 	              android:layout_height="wrap_content"
 	              android:layout_weight="0.7"
-	              android:inputType="phone"
+	              android:inputType="number"
 	              android:textColor="#000000" />
 	      </LinearLayout>
 	      
@@ -99,7 +99,7 @@
 	          android:layout_width="wrap_content"
 	          android:layout_height="wrap_content"
 	          android:layout_alignParentLeft="true"
-	          android:layout_marginTop="20dp"
+	          android:layout_marginTop="10dp"
 	          android:layout_below="@id/spPhoneType"
 	          android:padding="5dp"
 	          android:text="@string/tvPhStep2Text"
@@ -154,7 +154,7 @@
 	          android:layout_alignParentLeft="true"
 	          android:layout_below="@id/btnPhoneStartVerify"
 	          android:padding="5dp"
-	          android:layout_marginTop="20dp"
+	          android:layout_marginTop="10dp"
 	          android:text="@string/tvPhStep3Text"
 	          android:textAppearance="?android:attr/textAppearanceMedium"
 	          android:textColor="#000000" />
@@ -177,7 +177,7 @@
 	       	  android:layout_centerHorizontal="true"
 	          android:padding="5dp"
 	       	  android:ems="12"
-		      android:inputType="text"
+		      android:inputType="textNoSuggestions|textCapCharacters|textVisiblePassword"
 	          android:textColor="#000000" />
 	    
 		 <Button
