initial working impl (incl. UI) for ID-287

--- a/app/res/layout/home_screen.xml
+++ b/app/res/layout/home_screen.xml
@@ -88,4 +88,12 @@
         android:drawableLeft="@drawable/list"
         android:text="@string/manage_info" />
 
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:text="Magic" />
+
 </RelativeLayout>
