--- a/app/res/layout/authorization_list_view.xml
+++ b/app/res/layout/authorization_list_view.xml
@@ -33,7 +33,7 @@
         android:id="@+id/bthAuthorize"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/lvAuthorizationItems"
+        android:layout_below="@+id/cbUserConsent"
         android:layout_marginTop="10dp"
         android:layout_centerHorizontal="true"
         android:text="@string/authorizeButtonText" />
@@ -43,7 +43,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textColor="#000000"
-        android:layout_below="@+id/bthAuthorize"
+        android:layout_below="@+id/lvAuthorizationItems"
         android:text="@string/defaultAuthorizationInfo" />
 
     <TextView
@@ -55,5 +55,14 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="15dp"
         android:text="" />
+
+    <CheckBox
+        android:id="@+id/cbUserConsent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#000000"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/tvAuthorizationInfo"
+        android:text="@string/rememberAuthorization" />
 
 </RelativeLayout>
