--- a/app/res/layout/consent_details.xml
+++ b/app/res/layout/consent_details.xml
@@ -14,18 +14,27 @@
   limitations under the License.
 -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+    android:padding="5dp"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content" >
+
+    <ListView
+        android:id="@+id/lvConsentedItems"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tvDialogInfoText"
+        >
+    </ListView>
 
     <TextView
-        android:id="@+id/tvSpinnerLabel"
-        android:layout_width="fill_parent"
+        android:id="@+id/tvDialogInfoText"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:textColor="#000000"
-        android:ellipsize="marquee"
-        android:singleLine="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="10dp"
+        android:textSize="14sp"
+        android:textStyle="bold"
         android:text="" />
 
 </RelativeLayout>
