--- a/app/res/layout/consent_summary_row.xml
+++ b/app/res/layout/consent_summary_row.xml
@@ -13,19 +13,26 @@
   See the License for the specific language governing permissions and
   limitations under the License.
 -->
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+    android:layout_height="fill_parent"
+    android:padding="3dp"
+    android:orientation="vertical" >
 
     <TextView
-        android:id="@+id/tvSpinnerLabel"
-        android:layout_width="fill_parent"
+        android:id="@+id/tvRpId"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
+        android:text=""
         android:textColor="#000000"
-        android:ellipsize="marquee"
-        android:singleLine="true"
+        android:textStyle="bold"
+        android:textSize="15sp" />
+
+    <TextView
+        android:id="@+id/tvConsentNames"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#000000"
         android:text="" />
 
-</RelativeLayout>
+</LinearLayout>
