fixes and dialog shown when releasing consented attrs ID-287

--- a/app/res/layout/consent_details.xml
+++ b/app/res/layout/consent_details.xml
@@ -22,6 +22,7 @@
         android:id="@+id/lvConsentedItems"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:scrollbars="vertical"
         android:layout_below="@+id/tvDialogInfoText"
         >
     </ListView>
