--- a/app/res/layout/consent_summary.xml
+++ b/app/res/layout/consent_summary.xml
@@ -13,13 +13,15 @@
   See the License for the specific language governing permissions and
   limitations under the License.
 -->
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" 
     android:background="@drawable/default_bg"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
 
     <ListView
         android:id="@+id/lvConsents"
+        android:scrollbars="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
@@ -36,7 +38,8 @@
         android:gravity="center"
         android:padding="5dp"
         android:text="@string/noConsentsPresentText"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:textSize="18sp" />
 
 
 </RelativeLayout>
+
