--- a/app/res/layout/consent_summary_row.xml
+++ b/app/res/layout/consent_summary_row.xml
@@ -14,6 +14,7 @@
   limitations under the License.
 -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="@drawable/consent_list_cell_bg"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:padding="3dp"
