--- a/app/res/values-v14/themes.xml
+++ b/app/res/values-v14/themes.xml
@@ -16,7 +16,7 @@
 -->
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
 	
-	<style name="customTheme" parent="android:Theme"> 
+	<style name="customTheme" parent="android:Theme.NoTitleBar"> 
         <item name="android:windowTitleBackgroundStyle">@style/WindowTitleBackground</item>   
         <item name="android:windowTitleSize">42dp</item>
     </style> 
