--- a/app/res/layout/dialog_fragment.xml
+++ b/app/res/layout/dialog_fragment.xml
@@ -44,7 +44,7 @@
 	 	    android:layout_below="@id/tvDialogFragment"
 	 	    android:inputType="textUri"
 	 	    android:layout_marginTop="10dp"
-	 	    android:hint="@string/enter_url_hint"
+	 	    android:text="@string/enter_url_hint"
 	 	    />
 	 	<LinearLayout 
 	 	    android:id="@+id/llDialogFragment"
