--- a/app/res/layout/dialog_fragment.xml
+++ b/app/res/layout/dialog_fragment.xml
@@ -14,7 +14,7 @@
   See the License for the specific language governing permissions and
   limitations under the License.
 -->
-<LinearLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android" 
     android:layout_height="match_parent" 
     android:layout_width="match_parent"
@@ -73,4 +73,4 @@
 	 	</LinearLayout>
 	 	
 	</RelativeLayout>
-</LinearLayout>
+</ScrollView>
