--- a/app/res/layout/activity_main_tab.xml
+++ b/app/res/layout/activity_main_tab.xml
@@ -21,6 +21,7 @@
     android:layout_height="fill_parent">
 
     <LinearLayout
+        android:id="@+id/llMainActivityLayout"
         android:orientation="vertical"
         android:layout_width="fill_parent"
         android:background="#D8DCE3"
