--- a/app/res/menu/activity_main_tab.xml
+++ b/app/res/menu/activity_main_tab.xml
@@ -18,12 +18,12 @@
     <item
         android:id="@+id/revoke_concent"
         android:orderInCategory="100"
-        android:title="@string/revoke_permission"
+        android:title="@string/revokePermission"
         android:showAsAction="collapseActionView"/>
       <item
         android:id="@+id/about_us"
         android:orderInCategory="100"
-        android:title="@string/about_us"
+        android:title="@string/aboutUs"
         android:showAsAction="collapseActionView"/>
 
 </menu>
